update AuthenticationTest